Fix vertical alignment of buttons
1px because has 2px border-bottom

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -24,7 +24,7 @@ button,
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
-  vertical-align: middle;
+  vertical-align: 1px;
   appearance: none;
 
   &:hover {
